--- a/NeuroKinetic/ViewController/Base.lproj/Main.storyboard
+++ b/NeuroKinetic/ViewController/Base.lproj/Main.storyboard
@@ -284,26 +284,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Type the following sentence" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DE7-Ki-M3x">
-                                <rect key="frame" x="193" y="102" width="809" height="61"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Type the following sentence" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DE7-Ki-M3x">
+                                <rect key="frame" x="132" y="102" width="930" height="61"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.079662822186946869" green="0.47308212518692017" blue="0.36692225933074951" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="35"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="paragraph" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k5H-8X-t7I">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="paragraph" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k5H-8X-t7I">
                                 <rect key="frame" x="100" y="267" width="994" height="248"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.079662822186946869" green="0.47308212518692017" blue="0.36692225933074951" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="k5H-8X-t7I" secondAttribute="height" multiplier="497:124" id="h6E-pZ-K4W"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DUx-Ei-PSn">
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DUx-Ei-PSn">
                                 <rect key="frame" x="200" y="584" width="794" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -335,17 +335,8 @@
                         </subviews>
                         <color key="backgroundColor" red="0.079662822186946869" green="0.47308212518692017" blue="0.36692225933074951" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="DE7-Ki-M3x" firstAttribute="leading" secondItem="DlM-hp-iPG" secondAttribute="leading" constant="300" id="2sA-fz-fvj"/>
                             <constraint firstItem="DlM-hp-iPG" firstAttribute="bottom" secondItem="ben-S6-4FT" secondAttribute="bottom" constant="100" id="8tu-NV-Dib"/>
-                            <constraint firstItem="DlM-hp-iPG" firstAttribute="trailing" secondItem="DE7-Ki-M3x" secondAttribute="trailing" constant="300" id="9Jj-uf-47p"/>
-                            <constraint firstItem="DlM-hp-iPG" firstAttribute="bottom" secondItem="DUx-Ei-PSn" secondAttribute="bottom" constant="200" id="BX7-pK-6GL"/>
-                            <constraint firstItem="DlM-hp-iPG" firstAttribute="trailing" secondItem="DUx-Ei-PSn" secondAttribute="trailing" constant="200" id="EwU-f5-kSI"/>
-                            <constraint firstItem="DlM-hp-iPG" firstAttribute="trailing" secondItem="k5H-8X-t7I" secondAttribute="trailing" constant="100" id="dJV-o8-nif"/>
-                            <constraint firstItem="k5H-8X-t7I" firstAttribute="top" secondItem="DE7-Ki-M3x" secondAttribute="bottom" constant="100" id="fGM-93-UR9"/>
-                            <constraint firstItem="k5H-8X-t7I" firstAttribute="leading" secondItem="DlM-hp-iPG" secondAttribute="leading" constant="100" id="ieK-J4-7qF"/>
                             <constraint firstItem="DlM-hp-iPG" firstAttribute="trailing" secondItem="ben-S6-4FT" secondAttribute="trailing" constant="100" id="tCI-yH-0Ni"/>
-                            <constraint firstItem="DE7-Ki-M3x" firstAttribute="top" secondItem="DlM-hp-iPG" secondAttribute="top" constant="100" id="uCh-h0-xU5"/>
-                            <constraint firstItem="DUx-Ei-PSn" firstAttribute="leading" secondItem="DlM-hp-iPG" secondAttribute="leading" constant="200" id="xxX-dU-oSs"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="DlM-hp-iPG"/>
                     </view>
@@ -561,7 +552,7 @@
                                     <action selector="TAP:" destination="uiR-MZ-HIV" eventType="touchUpInside" id="6Ea-Mj-9gJ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TAP START TO START THE GAME" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lg1-ix-3OM">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TAP START TO START THE GAME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lg1-ix-3OM">
                                 <rect key="frame" x="349" y="265" width="540" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="32"/>
@@ -898,7 +889,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="hDn-2a-nQ5"/>
         <segue reference="Raq-LN-5uW"/>
-        <segue reference="GQo-3u-hdN"/>
+        <segue reference="yzq-G9-nTb"/>
         <segue reference="FzK-bU-J74"/>
         <segue reference="cAf-d9-I4r"/>
     </inferredMetricsTieBreakers>
